# ds-caselaw-public-ui

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  docker-compose.prod-test.yml  docker-compose.yml  docker-marklogic.yml  fabfile.py  jest.config.js  local.yml  manage.py  memray.txt  merge_production_dotenvs_in_dotenv.py  nodemon.json  package-lock.json  package.json  production.yml  pull_request_template.md  pyproject.toml  pytest.ini  redoc-static.html  renovate.json  requirements.txt  schema.yaml  setup.cfg  stylelint.config.js  test.yml  webpack.config.js
.github/: dependabot.yml  release.yml
api/: apps.py  urls.py  views.py
config/: converters.py  middleware.py  sitemaps.py  tests.py  urls.py  vcr_config.py  vcr_middleware.py  views.py  wsgi.py
doc/: cookiecutter-README.md
docs/: DEPLOY.md  RELEASE.md  conf.py  howto.rst  index.rst  make.bat  users.rst
ds_judgements_public_ui/: conftest.py
e2e_tests/: .#test_about_page.py  conftest.py  pytest.ini  requirements.txt  test_1st.py  test_about_page.py  test_advanced_search_page.py  test_content_pages.py  test_court_page.py  test_courts_and_tribunals_page.py  test_dragondebug.py  test_home_page.py  test_judgment_page.py  test_navigation.py  test_search_results_page.py  test_static_pages.py  test_style_guide_page.py  test_transactional_licence_form.py
fcl_api/: apps.py  urls.py  views.py
judgements/: apps.py  models.py  tests.py  urls.py  views.py
judgments/: admin.py  api_client.py  apps.py  context_processors.py  converters.py  dragondebug.py  feeds.py  jinja.py  jinja2.py  middleware.py  models.py  search_match.xsl  test_date_parsing.py  tests.py  urls.py  (+4 more)
(+1092 files in other folders)
